Travis built book

--- a/index.html
+++ b/index.html
@@ -4184,6 +4184,10 @@ devtools::install_github(&quot;ukgovdatascience/govdown&quot;)</code></pre>
 <p class="govuk-body">
 You need Pandoc version 2.0 or greater on your system to use Govdown. You can check which version you have at the R console by typing <code>rmarkdown::pandoc_version()</code>. Look at this <a href="https://github.com/ukgovdatascience/govdown/issues/2" class="govuk-link">GitHub issue</a> for advice on how to obtain a more recent version of pandoc.
 </p>
+<h2 id="shiny" class="govuk-heading-l">Shiny</h2>
+<p class="govuk-body">
+If you are developing a Shiny application, then look at <a href="https://github.com/moj-analytical-services/shinyGovstyle" class="uri govuk-link">https://github.com/moj-analytical-services/shinyGovstyle</a>.
+</p>
 <h2 id="creating-standalone-html-pages" class="govuk-heading-l">Creating standalone HTML pages</h2>
 <p class="govuk-body">
 Govdown HTML pages are created in the same way as R Markdown HTML pages. Write a markdown document (a plain text file with the suffix <code>.Rmd</code> or <code>.md</code> instead of <code>.txt</code>), and put something called ‘YAML metadata’ at the top. It should look like this:
