--- a/LICENSE.html
+++ b/LICENSE.html
@@ -4138,6 +4138,7 @@ color: #d14;
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper " id="main-content" role="main">
+            <h1 class="govuk-heading-xl">GOV.UK-style markdown documents</h1>
             <h1 id="mit-license" class="govuk-heading-xl">MIT License</h1>
 <p class="govuk-body">
 Copyright (c) 2019 Duncan Garmonsway
