--- a/NEWS.html
+++ b/NEWS.html
@@ -4139,7 +4139,13 @@ color: #d14;
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper " id="main-content" role="main">
+            <h1 class="govuk-heading-xl">GOV.UK-style markdown documents</h1>
             <h1 id="govdown-0.9.0" class="govuk-heading-xl">govdown 0.9.0</h1>
+<ul class="govuk-list govuk-list--bullet">
+<li class="govuk-body">
+Fix a pandoc warning about missing title elements.
+</li>
+</ul>
 <h1 id="govdown-0.8.0" class="govuk-heading-xl">govdown 0.8.0</h1>
 <ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
