--- a/tech-docs.html
+++ b/tech-docs.html
@@ -4139,6 +4139,7 @@ color: #d14;
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper " id="main-content" role="main">
+            <h1 class="govuk-heading-xl">GOV.UK-style markdown documents</h1>
             <h1 id="technical-documentation" class="govuk-heading-xl">Technical Documentation</h1>
 <div>
 <p class="govuk-body-l">
