Travis built book

--- a/NEWS.html
+++ b/NEWS.html
@@ -4145,6 +4145,9 @@ color: #d14;
 <li class="govuk-body">
 Fix a pandoc warning about missing title elements.
 </li>
+<li class="govuk-body">
+Provide <code>unstrap()</code> to remove unwanted Boostrap CSS from any crosstalk components (#57)
+</li>
 </ul>
 <h1 id="govdown-0.8.0" class="govuk-heading-xl">govdown 0.8.0</h1>
 <ul class="govuk-list govuk-list--bullet">
