Travis built book

--- a/NEWS.html
+++ b/NEWS.html
@@ -4139,6 +4139,12 @@ This is new – your
 
 <div class="govuk-width-container">
 <main class="govuk-main-wrapper " id="main-content" role="main">
+<h1 id="govdown-0.10.0" class="govuk-heading-xl">govdown 0.10.0</h1>
+<ul class="govuk-list govuk-list--bullet">
+<li class="govuk-body">
+Upgrade to GOV.UK Frontend release v3.7.0. See <a href="https://github.com/alphagov/govuk-frontend/releases" class="uri govuk-link">https://github.com/alphagov/govuk-frontend/releases</a> for changes.
+</li>
+</ul>
 <h1 id="govdown-0.9.1" class="govuk-heading-xl">govdown 0.9.1</h1>
 <ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
