--- a/NEWS.html
+++ b/NEWS.html
@@ -146,6 +146,11 @@ margin-bottom: 0; }
 .govuk-list--bullet > li,
 .govuk-list--number > li {
 margin-bottom: 5px; } }
+.govuk-list--spaced > li {
+margin-bottom: 10px; }
+@media (min-width: 40.0625em) {
+.govuk-list--spaced > li {
+margin-bottom: 15px; } }
 .govuk-template {
 background-color: #f3f2f1;
 -webkit-text-size-adjust: 100%;
@@ -349,7 +354,7 @@ line-height: 1.3157894737; } }
 .govuk-caption-m {
 font-size: 14pt;
 line-height: 1.15; } }
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 color: #0b0c0c;
 font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 -webkit-font-smoothing: antialiased;
@@ -361,24 +366,24 @@ line-height: 1.1111111111;
 margin-top: 0;
 margin-bottom: 20px; }
 @media print {
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 color: #000000; } }
 @media print {
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 font-family: sans-serif; } }
 @media (min-width: 40.0625em) {
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 font-size: 24px;
 font-size: 1.5rem;
 line-height: 1.25; } }
 @media print {
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 font-size: 18pt;
 line-height: 1.15; } }
 @media (min-width: 40.0625em) {
-.govuk-body-l, .govuk-body-lead {
+.govuk-body-lead, .govuk-body-l {
 margin-bottom: 30px; } }
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 color: #0b0c0c;
 font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 -webkit-font-smoothing: antialiased;
@@ -390,22 +395,22 @@ line-height: 1.25;
 margin-top: 0;
 margin-bottom: 15px; }
 @media print {
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 color: #000000; } }
 @media print {
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 font-family: sans-serif; } }
 @media (min-width: 40.0625em) {
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 font-size: 19px;
 font-size: 1.1875rem;
 line-height: 1.3157894737; } }
 @media print {
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 font-size: 14pt;
 line-height: 1.15; } }
 @media (min-width: 40.0625em) {
-.govuk-body-m, .govuk-body {
+.govuk-body, .govuk-body-m {
 margin-bottom: 20px; } }
 .govuk-body-s {
 color: #0b0c0c;
@@ -659,24 +664,28 @@ padding-top: 30px; }
 padding-top: 50px; } }
 .govuk-width-container {
 max-width: 960px;
-margin: 0 15px; }
+margin-right: 15px;
+margin-left: 15px; }
 @supports (margin: max(calc(0px))) {
 .govuk-width-container {
 margin-right: max(15px, calc(15px + env(safe-area-inset-right)));
 margin-left: max(15px, calc(15px + env(safe-area-inset-left))); } }
 @media (min-width: 40.0625em) {
 .govuk-width-container {
-margin: 0 30px; }
+margin-right: 30px;
+margin-left: 30px; }
 @supports (margin: max(calc(0px))) {
 .govuk-width-container {
 margin-right: max(30px, calc(15px + env(safe-area-inset-right)));
 margin-left: max(30px, calc(15px + env(safe-area-inset-left))); } } }
 @media (min-width: 1020px) {
 .govuk-width-container {
-margin: 0 auto; }
+margin-right: auto;
+margin-left: auto; }
 @supports (margin: max(calc(0px))) {
 .govuk-width-container {
-margin: 0 auto; } } }
+margin-right: auto;
+margin-left: auto; } } }
 .govuk-accordion {
 margin-bottom: 20px; }
 @media (min-width: 40.0625em) {
@@ -688,8 +697,27 @@ padding-top: 15px; }
 padding-top: 15px;
 padding-bottom: 15px; }
 .govuk-accordion__section-heading {
+font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+font-weight: 400;
+font-size: 18px;
+font-size: 1.125rem;
+line-height: 1.1111111111;
 margin-top: 0;
 margin-bottom: 0; }
+@media print {
+.govuk-accordion__section-heading {
+font-family: sans-serif; } }
+@media (min-width: 40.0625em) {
+.govuk-accordion__section-heading {
+font-size: 24px;
+font-size: 1.5rem;
+line-height: 1.25; } }
+@media print {
+.govuk-accordion__section-heading {
+font-size: 18pt;
+line-height: 1.15; } }
 .govuk-accordion__section-button {
 font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 -webkit-font-smoothing: antialiased;
@@ -902,26 +930,34 @@ color: #0b0c0c; }
 .govuk-back-link:link, .govuk-back-link:visited, .govuk-back-link:hover, .govuk-back-link:active, .govuk-back-link:focus {
 color: #000000; } }
 .govuk-back-link[href] {
-border-bottom: 1px solid #0b0c0c;
-text-decoration: none; }
+text-decoration: underline; }
 .govuk-back-link[href]:focus {
-border-bottom-color: transparent; }
+text-decoration: none; }
+.govuk-back-link[href]:focus:before {
+border-color: #0b0c0c; }
 .govuk-back-link:before {
-display: block;
-width: 0;
-height: 0;
-border-style: solid;
-border-color: transparent;
--webkit-clip-path: polygon(0% 50%, 100% 100%, 100% 0%);
-clip-path: polygon(0% 50%, 100% 100%, 100% 0%);
-border-width: 5px 6px 5px 0;
-border-right-color: inherit;
 content: "";
+display: block;
 position: absolute;
 top: 0;
 bottom: 0;
-left: 0;
-margin: auto; }
+left: 3px;
+width: 7px;
+height: 7px;
+margin: auto 0;
+-webkit-transform: rotate(225deg);
+-ms-transform: rotate(225deg);
+transform: rotate(225deg);
+border: solid;
+border-width: 1px 1px 0 0;
+border-color: #626a6e; }
+.govuk-back-link:after {
+content: "";
+position: absolute;
+top: -14px;
+right: 0;
+bottom: -14px;
+left: 0; }
 .govuk-breadcrumbs {
 font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 -webkit-font-smoothing: antialiased;
@@ -1003,6 +1039,18 @@ color: #0b0c0c; }
 @media print {
 .govuk-breadcrumbs__link:link, .govuk-breadcrumbs__link:visited, .govuk-breadcrumbs__link:hover, .govuk-breadcrumbs__link:active, .govuk-breadcrumbs__link:focus {
 color: #000000; } }
+@media (max-width: 40.0525em) {
+.govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item {
+display: none; }
+.govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:first-child, .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:last-child {
+display: inline-block; }
+.govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:before {
+top: 6px;
+margin: 0; }
+.govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list {
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex; } }
 .govuk-button {
 font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
 -webkit-font-smoothing: antialiased;
@@ -1100,7 +1148,7 @@ box-shadow: 0 2px 0 #929191; }
 color: #0b0c0c; }
 .govuk-button--secondary:hover {
 background-color: #dbdad9; }
-.govuk-button--secondary:hover[disabled] {
+.govuk-button--secondary[disabled]:hover {
 background-color: #f3f2f1; }
 .govuk-button--warning {
 background-color: #d4351c;
@@ -1109,7 +1157,7 @@ box-shadow: 0 2px 0 #55150b; }
 color: #ffffff; }
 .govuk-button--warning:hover {
 background-color: #aa2a16; }
-.govuk-button--warning:hover[disabled] {
+.govuk-button--warning[disabled]:hover {
 background-color: #d4351c; }
 .govuk-button--start {
 font-weight: 700;
@@ -1117,12 +1165,10 @@ font-size: 18px;
 font-size: 1.125rem;
 line-height: 1;
 display: -webkit-inline-box;
-display: -webkit-inline-flex;
 display: -ms-inline-flexbox;
 display: inline-flex;
 min-height: auto;
 -webkit-box-pack: center;
--webkit-justify-content: center;
 -ms-flex-pack: center;
 justify-content: center; }
 @media (min-width: 40.0625em) {
@@ -1137,10 +1183,8 @@ line-height: 1; } }
 .govuk-button__start-icon {
 margin-left: 5px;
 vertical-align: middle;
--webkit-flex-shrink: 0;
 -ms-flex-negative: 0;
 flex-shrink: 0;
--webkit-align-self: center;
 -ms-flex-item-align: center;
 align-self: center; }
 @media (min-width: 48.0625em) {
@@ -1582,6 +1626,48 @@ box-shadow: 0 0 0 3px #ffdd00, 0 0 0 10px #b1b4b6; }
 box-shadow: initial; }
 .govuk-checkboxes--small .govuk-checkboxes__item:hover .govuk-checkboxes__input:focus + .govuk-checkboxes__label::before {
 box-shadow: 0 0 0 3px #ffdd00; } }
+.govuk-textarea {
+font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+font-weight: 400;
+font-size: 16px;
+font-size: 1rem;
+line-height: 1.25;
+box-sizing: border-box;
+display: block;
+width: 100%;
+min-height: 40px;
+margin-bottom: 20px;
+padding: 5px;
+resize: vertical;
+border: 2px solid #0b0c0c;
+border-radius: 0;
+-webkit-appearance: none; }
+@media print {
+.govuk-textarea {
+font-family: sans-serif; } }
+@media (min-width: 40.0625em) {
+.govuk-textarea {
+font-size: 19px;
+font-size: 1.1875rem;
+line-height: 1.25; } }
+@media print {
+.govuk-textarea {
+font-size: 14pt;
+line-height: 1.25; } }
+@media (min-width: 40.0625em) {
+.govuk-textarea {
+margin-bottom: 30px; } }
+.govuk-textarea:focus {
+outline: 3px solid #ffdd00;
+outline-offset: 0;
+box-shadow: inset 0 0 0 2px; }
+.govuk-textarea--error {
+border: 4px solid #d4351c; }
+.govuk-textarea--error:focus {
+border-color: #0b0c0c;
+box-shadow: none; }
 .govuk-character-count {
 margin-bottom: 20px; }
 @media (min-width: 40.0625em) {
@@ -2047,13 +2133,6 @@ color: #0b0c0c;
 background-color: #ffdd00;
 box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
 text-decoration: none; }
-.govuk-footer__inline-list .govuk-footer__link,
-.govuk-footer__list .govuk-footer__link {
-text-decoration: none; }
-.govuk-footer__inline-list .govuk-footer__link:hover:not(:focus), .govuk-footer__inline-list .govuk-footer__link:active:not(:focus),
-.govuk-footer__list .govuk-footer__link:hover:not(:focus),
-.govuk-footer__list .govuk-footer__link:active:not(:focus) {
-text-decoration: underline; }
 .govuk-footer__section-break {
 margin: 0;
 margin-bottom: 30px;
@@ -2064,20 +2143,16 @@ border-bottom: 1px solid #b1b4b6; }
 margin-bottom: 50px; } }
 .govuk-footer__meta {
 display: -webkit-box;
-display: -webkit-flex;
 display: -ms-flexbox;
 display: flex;
 margin-right: -15px;
 margin-left: -15px;
--webkit-flex-wrap: wrap;
 -ms-flex-wrap: wrap;
 flex-wrap: wrap;
 -webkit-box-align: end;
--webkit-align-items: flex-end;
 -ms-flex-align: end;
 align-items: flex-end;
 -webkit-box-pack: center;
--webkit-justify-content: center;
 -ms-flex-pack: center;
 justify-content: center; }
 .govuk-footer__meta-item {
@@ -2086,12 +2161,10 @@ margin-bottom: 25px;
 margin-left: 15px; }
 .govuk-footer__meta-item--grow {
 -webkit-box-flex: 1;
--webkit-flex: 1;
 -ms-flex: 1;
 flex: 1; }
 @media (max-width: 40.0525em) {
 .govuk-footer__meta-item--grow {
--webkit-flex-basis: 320px;
 -ms-flex-preferred-size: 320px;
 flex-basis: 320px; } }
 .govuk-footer__licence-logo {
@@ -2139,12 +2212,10 @@ margin-bottom: 40px; } }
 padding-bottom: 10px; } }
 .govuk-footer__navigation {
 display: -webkit-box;
-display: -webkit-flex;
 display: -ms-flexbox;
 display: flex;
 margin-right: -15px;
 margin-left: -15px;
--webkit-flex-wrap: wrap;
 -ms-flex-wrap: wrap;
 flex-wrap: wrap; }
 .govuk-footer__section {
@@ -2154,21 +2225,17 @@ margin-bottom: 30px;
 margin-left: 15px;
 vertical-align: top;
 -webkit-box-flex: 1;
--webkit-flex-grow: 1;
 -ms-flex-positive: 1;
 flex-grow: 1;
--webkit-flex-shrink: 1;
 -ms-flex-negative: 1;
 flex-shrink: 1; }
 @media (max-width: 48.0525em) {
 .govuk-footer__section {
--webkit-flex-basis: 200px;
 -ms-flex-preferred-size: 200px;
 flex-basis: 200px; } }
 @media (min-width: 48.0625em) {
 .govuk-footer__section:first-child:nth-last-child(2) {
 -webkit-box-flex: 2;
--webkit-flex-grow: 2;
 -ms-flex-positive: 2;
 flex-grow: 2; } }
 .govuk-footer__list {
@@ -2626,6 +2693,33 @@ font-size: 14pt;
 line-height: 1; } }
 .govuk-tag--inactive {
 background-color: #626a6e; }
+.govuk-tag--grey {
+color: #454a4d;
+background: #eff0f1; }
+.govuk-tag--purple {
+color: #3d2375;
+background: #dbd5e9; }
+.govuk-tag--turquoise {
+color: #10403c;
+background: #bfe3e0; }
+.govuk-tag--blue {
+color: #144e81;
+background: #d2e2f1; }
+.govuk-tag--yellow {
+color: #594d00;
+background: #fff7bf; }
+.govuk-tag--orange {
+color: #6e3619;
+background: #fcd6c3; }
+.govuk-tag--red {
+color: #942514;
+background: #f6d7d2; }
+.govuk-tag--pink {
+color: #80224d;
+background: #f7d7e6; }
+.govuk-tag--green {
+color: #005a30;
+background: #cce2d8; }
 .govuk-phase-banner {
 padding-top: 10px;
 padding-bottom: 10px;
@@ -3153,48 +3247,6 @@ padding-right: 0; }
 font-weight: 700;
 display: table-caption;
 text-align: left; }
-.govuk-textarea {
-font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-font-weight: 400;
-font-size: 16px;
-font-size: 1rem;
-line-height: 1.25;
-box-sizing: border-box;
-display: block;
-width: 100%;
-min-height: 40px;
-margin-bottom: 20px;
-padding: 5px;
-resize: vertical;
-border: 2px solid #0b0c0c;
-border-radius: 0;
--webkit-appearance: none; }
-@media print {
-.govuk-textarea {
-font-family: sans-serif; } }
-@media (min-width: 40.0625em) {
-.govuk-textarea {
-font-size: 19px;
-font-size: 1.1875rem;
-line-height: 1.25; } }
-@media print {
-.govuk-textarea {
-font-size: 14pt;
-line-height: 1.25; } }
-@media (min-width: 40.0625em) {
-.govuk-textarea {
-margin-bottom: 30px; } }
-.govuk-textarea:focus {
-outline: 3px solid #ffdd00;
-outline-offset: 0;
-box-shadow: inset 0 0 0 2px; }
-.govuk-textarea--error {
-border: 4px solid #d4351c; }
-.govuk-textarea--error:focus {
-border-color: #0b0c0c;
-box-shadow: none; }
 .govuk-warning-text {
 position: relative;
 margin-bottom: 20px;
@@ -3312,6 +3364,9 @@ display: inline-block !important; }
 display: block !important; }
 .govuk-\!-display-none {
 display: none !important; }
+@media print {
+.govuk-\!-display-none-print {
+display: none !important; } }
 .govuk-\!-margin-0 {
 margin: 0 !important; }
 @media (min-width: 40.0625em) {
@@ -5235,7 +5290,7 @@ Accordion.prototype.initHeaderAttributes = function ($headerWrapper, index) {
   icon.className = this.iconClass;
   icon.setAttribute('aria-hidden', 'true');
 
-  $heading.appendChild(icon);
+  $button.appendChild(icon);
 };
 
 // When section toggled, set and store state
@@ -6092,7 +6147,7 @@ Checkboxes.prototype.handleClick = function (event) {
 
   if (detect) return
 
-    // Polyfill from https://raw.githubusercontent.com/Financial-Times/polyfill-service/1f3c09b402f65bf6e393f933a15ba63f1b86ef1f/packages/polyfill-library/polyfills/Element/prototype/closest/polyfill.js
+  // Polyfill from https://raw.githubusercontent.com/Financial-Times/polyfill-service/1f3c09b402f65bf6e393f933a15ba63f1b86ef1f/packages/polyfill-library/polyfills/Element/prototype/closest/polyfill.js
   Element.prototype.closest = function closest(selector) {
     var node = this;
 
@@ -6370,49 +6425,41 @@ Radios.prototype.handleClick = function (event) {
 
 (function(undefined) {
 
-    // Detection from https://github.com/Financial-Times/polyfill-service/pull/1062/files#diff-b09a5d2acf3314b46a6c8f8d0c31b85c
+    // Detection from https://raw.githubusercontent.com/Financial-Times/polyfill-library/master/polyfills/Element/prototype/nextElementSibling/detect.js
     var detect = (
-      'Element' in this && "nextElementSibling" in document.documentElement
+      'document' in this && "nextElementSibling" in document.documentElement
     );
 
     if (detect) return
 
-
-    (function (global) {
-
-      // Polyfill from https://github.com/Financial-Times/polyfill-service/pull/1062/files#diff-404b69b4750d18dea4174930a49170fd
-      Object.defineProperty(Element.prototype, "nextElementSibling", {
-        get: function(){
-          var el = this.nextSibling;
-          while (el && el.nodeType !== 1) { el = el.nextSibling; }
-          return (el.nodeType === 1) ? el : null;
-        }
-      });
-
-    }(this));
+    // Polyfill from https://raw.githubusercontent.com/Financial-Times/polyfill-library/master/polyfills/Element/prototype/nextElementSibling/polyfill.js
+    Object.defineProperty(Element.prototype, "nextElementSibling", {
+      get: function(){
+        var el = this.nextSibling;
+        while (el && el.nodeType !== 1) { el = el.nextSibling; }
+        return el;
+      }
+    });
 
 }).call('object' === typeof window && window || 'object' === typeof self && self || 'object' === typeof global && global || {});
 
 (function(undefined) {
 
-    // Detection from https://github.com/Financial-Times/polyfill-service/pull/1062/files#diff-a162235fbc9c0dd40d4032265f44942e
+    // Detection from https://raw.githubusercontent.com/Financial-Times/polyfill-library/master/polyfills/Element/prototype/previousElementSibling/detect.js
     var detect = (
-      'Element' in this && 'previousElementSibling' in document.documentElement
+      'document' in this && "previousElementSibling" in document.documentElement
     );
 
     if (detect) return
 
-    (function (global) {
-      // Polyfill from https://github.com/Financial-Times/polyfill-service/pull/1062/files#diff-b45a1197b842728cb76b624b6ba7d739
-      Object.defineProperty(Element.prototype, 'previousElementSibling', {
-        get: function(){
-          var el = this.previousSibling;
-          while (el && el.nodeType !== 1) { el = el.previousSibling; }
-          return (el.nodeType === 1) ? el : null;
-        }
-      });
-
-    }(this));
+    // Polyfill from https://raw.githubusercontent.com/Financial-Times/polyfill-library/master/polyfills/Element/prototype/previousElementSibling/polyfill.js
+    Object.defineProperty(Element.prototype, 'previousElementSibling', {
+      get: function(){
+        var el = this.previousSibling;
+        while (el && el.nodeType !== 1) { el = el.previousSibling; }
+        return el;
+      }
+    });
 
 }).call('object' === typeof window && window || 'object' === typeof self && self || 'object' === typeof global && global || {});
 
