Travis built book

--- a/NEWS.html
+++ b/NEWS.html
@@ -4194,6 +4194,12 @@ This is new – your
 
 <div class="govuk-width-container">
 <main class="govuk-main-wrapper " id="main-content" role="main">
+<h1 id="govdown-0.10.1" class="govuk-heading-xl">govdown 0.10.1</h1>
+<ul class="govuk-list govuk-list--bullet">
+<li class="govuk-body">
+Convert complex tables (pandoc version &gt;= 2.10) to the original kind, now known as ‘simple’.
+</li>
+</ul>
 <h1 id="govdown-0.10.0" class="govuk-heading-xl">govdown 0.10.0</h1>
 <ul class="govuk-list govuk-list--bullet">
 <li class="govuk-body">
