--- a/index.html
+++ b/index.html
@@ -4232,7 +4232,7 @@ You can install the released version of govdown from <a href="https://CRAN.R-pro
 </p>
 <pre class="language-r"><code class="language-r">install.packages(&quot;govdown&quot;)</code></pre>
 <p class="govuk-body">
-And the development version from <a href="https://github.com/ukgovdatascience/govdown" class="govuk-link">GitHub</a> with:
+And the development version from <a href="https://github.com/ukgovdatascience/govdown/" class="govuk-link">GitHub</a> with:
 </p>
 <pre class="language-r"><code class="language-r"># install.packages(&quot;devtools&quot;) # if devtools is not already installed
 devtools::install_github(&quot;ukgovdatascience/govdown&quot;)</code></pre>
@@ -4257,7 +4257,7 @@ output:
     font: &quot;sans-serif&quot; # (default) or &quot;new-transport&quot;
     favicon: &quot;custom&quot; # or &quot;none&quot; (default) or &quot;govuk&quot; see ?govdown_document
     logo: &quot;images/logo.svg&quot; # or false (default)
-    logo_url: &quot;https://ukgovdatascience.github.io/govdown&quot;
+    logo_url: &quot;https://ukgovdatascience.github.io/govdown/&quot;
     logo_text: &quot;logo_text&quot;
     page_title: &quot;page_title&quot;
     title: &quot;title&quot;
@@ -4289,7 +4289,7 @@ output:
     font: &quot;sans-serif&quot; # (default) or &quot;new-transport&quot;
     favicon: &quot;custom&quot; # or &quot;none&quot; (default) or &quot;govuk&quot; see ?govdown_document
     logo: &quot;images/logo.svg&quot; # or false (default)
-    logo_url: &quot;https://ukgovdatascience.github.io/govdown&quot;
+    logo_url: &quot;https://ukgovdatascience.github.io/govdown/&quot;
     logo_text: &quot;logo_text&quot;
     page_title: &quot;page_title&quot;
     title: &quot;title&quot;
@@ -4688,7 +4688,7 @@ Or you can use the <code>knitr::include_graphics()</code> function in an R Markd
 </p>
 <h3 id="tables" class="govuk-heading-m">Tables</h3>
 <p class="govuk-body">
-All four kinds of <a href="https://pandoc.org/MANUAL.html#tables" class="govuk-link">pandoc tables</a> are work. Below is a common kind. Note that only left-aligned and right-aligned columns are supported in the GOV.UK Design System, and captions always appear above the table.
+All four kinds of <a href="https://pandoc.org/MANUAL.html#tables" class="govuk-link">pandoc tables</a> work. Below is a common kind. Note that only left-aligned and right-aligned columns are supported in the GOV.UK Design System, and captions always appear above the table.
 </p>
 <pre class="language-plaintext"><code class="language-plaintext">Table: This is a table caption.
 
