Travis built book

--- a/accessibility.html
+++ b/accessibility.html
@@ -4260,7 +4260,7 @@ This website is fully compliant with the Web Content Accessibility Guidelines ve
 This website was last tested on the 2nd of October, 2019. The test was carried out by the Government Digital Service.
 </p>
 <p class="govuk-body">
-We tested every page of the website, available at <a href="https://ukgovdatascience.github.io/govdown" class="uri govuk-link">https://ukgovdatascience.github.io/govdown</a>.
+We tested every page of the website, available at <a href="https://ukgovdatascience.github.io/govdown/" class="uri govuk-link">https://ukgovdatascience.github.io/govdown/</a>.
 </p>
 <p class="govuk-body">
 You can read the <a href="https://github.com/ukgovdatascience/govdown/issues/11" class="govuk-link">full accessibility test report</a>.
