Travis built book

--- a/index.html
+++ b/index.html
@@ -4197,7 +4197,7 @@ This is new – your
 <h1 id="govdown" class="govuk-heading-xl">Govdown</h1>
 <div>
 <p class="govuk-body-l">
-Govdown is an R package for creating websites and standalone HTML pages that use the <a href="https://design-system.service.gov.uk/" class="govuk-link">GOV.UK Design System</a>. This website is an example.
+Govdown is an R package for creating websites and standalone HTML pages that use the <a href="https://design-system.service.gov.uk/" class="govuk-link">GOV.UK Design System</a>. This website is an example. Please also consider an alternative, <a href="https://co-analysis.github.io/govuk-hugo-demo/" class="govuk-link">govuk-hugo-r</a>.
 </p>
 </div>
 <p class="govuk-body">
